<resources>
    <string name="app_name">BarApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_name">БАР \"ТЕБЕ НЕ УГОДИШЬ\"</string>
    <string name="bottomsheet_title">ВАШ ЗАКАЗ</string>
    <string name="button_order">Заказать</string>
    <string name="button_clear">Очистить</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_reserve">Бронирование</string>
    <string name="menu_special_offers">Акции</string>
    <string name="menu_account">Аккаунт</string>
    <string name="menu_exit">Выйти</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
</resources>