<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginEnd="@dimen/margin_normal"
        app:layout_anchor="@id/bottomSheet"
        app:layout_anchorGravity="top|end"
        app:layout_behavior=".ui.behaviors.FabBehavior"
        app:srcCompat="@drawable/ic_menu" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabExit"
        style="@style/Widget.BarApp.FabStyle.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/fab_exit_margin_bottom"
        app:srcCompat="@drawable/ic_menu_exit"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewExit"
        style="@style/Widget.BarApp.TextView.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/menu_text_margin_end"
        android:text="@string/menu_exit"
        app:layout_anchor="@id/fabExit"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabAccount"
        style="@style/Widget.BarApp.FabStyle.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/fab_account_margin_bottom"
        app:srcCompat="@drawable/ic_menu_account"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewAccount"
        style="@style/Widget.BarApp.TextView.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/menu_text_margin_end"
        android:text="@string/menu_account"
        app:layout_anchor="@id/fabAccount"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSpecialOffer"
        style="@style/Widget.BarApp.FabStyle.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/fab_offer_margin_bottom"
        app:srcCompat="@drawable/ic_menu_special_offers"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewSpecialOffer"
        style="@style/Widget.BarApp.TextView.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/menu_text_margin_end"
        android:text="@string/menu_special_offers"
        app:layout_anchor="@id/fabSpecialOffer"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBooking"
        style="@style/Widget.BarApp.FabStyle.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/fab_booking_margin_bottom"
        app:srcCompat="@drawable/ic_menu_reserve"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewBooking"
        style="@style/Widget.BarApp.TextView.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/menu_text_margin_end"
        android:text="@string/menu_reserve"
        app:layout_anchor="@id/fabBooking"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabContacts"
        style="@style/Widget.BarApp.FabStyle.Mini"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/margin_normal"
        android:layout_marginBottom="@dimen/fab_contacts_margin_bottom"
        app:srcCompat="@drawable/ic_menu_info"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewContacts"
        style="@style/Widget.BarApp.TextView.Menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/menu_text_margin_end"
        android:text="@string/menu_contacts"
        app:layout_anchor="@id/fabContacts"
        app:layout_anchorGravity="center"
        tools:visibility="visible" />
</merge>